@@ -110,6 +110,7 @@
     * 1094 FIX: sidebar snaping 'Tree of folders': fixed exception
     * 1154 FIX: Availability: Fixed unwanted redirect to edit annotation page after editing availability options...
     * 1401 FIX: Display options in views are now again persistent...
+    * 1120 FIX: Multisite filters Host/Service Contactgroup: Fixed livestatus exception...
 
     WATO:
     * 1096 New WATO webservices: manage hosts via webinterface...
